--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -24,7 +24,7 @@
     </div>
     
     <div class="greeting-image-div">
-      <img src="../../assets/images/manOnTable.svg" alt="Anees sitting on table">
+      <img src="../../assets/images/manOnTable.svg" alt="Mehwish sitting on table">
     </div>
   </div>
 </div>
