--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -5,26 +5,26 @@
       <div>
         <h1 class="greeting-text">
           {{greeting.title}}
-          <span class="wave-emoji">👋</span>
+          <!-- <span class="wave-emoji">👋</span> -->
         </h1>
         <p class="greeting-text-p subTitle">{{greeting.subTitle}}</p>
-            <app-social-media></app-social-media>
+            <!-- <app-social-media></app-social-media> -->
         <div class="button-greeting-div">
 <!--        button-->
           <div>
-            <a class="main-button" href="#contact">Contact me</a>
+            <a class="main-button" href="#contact">Contact Us</a>
           </div>
-          <div>
+          <!-- <div>
             <a class="main-button" href={{greeting.resumeLink}}>See my resume</a>
-          </div>
+          </div> -->
 <!--          <Button text="Contact me" href="#contact" />-->
 <!--          <Button text="See my resume" newTab={true} href={greeting.resumeLink} />-->
         </div>
       </div>
     </div>
     
-    <div class="greeting-image-div">
-      <img src="../../assets/images/manOnTable.svg" alt="Mehwish sitting on table">
+    <div class="greeting-image-div" >
+      <img src="../../assets/images/bgimage.jpeg" alt="Mehwish sitting on table">
     </div>
   </div>
 </div>
