--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,15 +11,15 @@
     </label>
     <ul class="menu">
       <li>
-        <a href="#skills">About</a>
+        <a href="#">Das Projekt KI-Kompass Inklusiv</a>
       </li>
       <li>
-        <a href="#skills">Skills</a>
+        <a href="#skills">Das Projekt Team</a>
       </li>
       <li>
-        <a href="#education">Education</a>
+        <a href="#education">Die Projektauftaktveranstaltung</a>
       </li>
-      <li>
+      <!-- <li>
         <a href="#projects">Projects</a>
       </li>
       <li>
@@ -27,7 +27,7 @@
       </li>
       <li>
         <a href="#contact">Contact Me</a>
-      </li>
+      </li> -->
     </ul>
   </header>
 </div>
