--- a/src/app/experience/experience-card/experience-card.component.html
+++ b/src/app/experience/experience-card/experience-card.component.html
@@ -2,21 +2,7 @@
   <div [ngStyle]="{background: experience.color}" class="experience-banner">
     <div class="experience-blurred_div"></div>
     <div class="experience-div-company">
-      <a href={{experience.link}}  target="_blank">
-      <h5 class="experience-text-company">{{experience.company}}</h5>
-      </a>
+      <p class="experience-text-company">{{experience.company}}</p>
     </div>
-    <a href={{experience.link}}  target="_blank">
-      <img crossOrigin="anonymous" class="experience-roundedimg" [src]="experience.companylogo">
-    </a>
-    <!--    <p>{{colors.myDominantColor}}</p>-->
-  </div>
-  <div class="experience-text-details">
-    <h5 class="experience-text-role">{{experience.role}}</h5>
-    <h5 class="experience-text-date">{{experience.date}}</h5>
-    <p class="subTitle experience-text-desc">{{experience.desc}}</p>
-    <ul>
-      <li class="subTitle" *ngFor="let lis of experience.descBullets">{{lis}}</li>
-    </ul>
   </div>
 </div>
