--- a/src/app/experience/experience-card/experience-card.component.scss
+++ b/src/app/experience/experience-card/experience-card.component.scss
@@ -8,7 +8,7 @@
 }
 
 .experience-card:hover {
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px -10px;
+  box-shadow: #529ada 0px 20px 30px -10px;
 }
 
 .experience-banner {
@@ -60,12 +60,12 @@
   padding: 1.5rem;
   margin: 0;
   color: #fff;
-  font-size: 25px;
+  font-size: 20px;
   text-align: center;
   font-weight: 700;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
+  //text-overflow: inherit;
+  //overflow: hidden;
+  //white-space: nowrap;
 }
 
 .experience-roundedimg {
