Header COmponent Ready

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,7 @@
 <div>
   <header class="header" wmAnimate="landing" aos speed="normal">
-    <a href="" class="logo">
-      <span class="grey-color"> &lt;</span>
+    <a class="logo">
       <span class="logo-name">{{greeting.username}}</span>
-      <span class="grey-color">/&gt;</span>
     </a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn">
@@ -19,15 +17,6 @@
       <li>
         <a href="#education">Die Projektauftaktveranstaltung</a>
       </li>
-      <!-- <li>
-        <a href="#projects">Projects</a>
-      </li>
-      <li>
-        <a href="#experience">Experiences</a>
-      </li>
-      <li>
-        <a href="#contact">Contact Me</a>
-      </li> -->
     </ul>
   </header>
 </div>
