--- a/src/app/experience/experience-card/experience-card.component.scss
+++ b/src/app/experience/experience-card/experience-card.component.scss
@@ -28,6 +28,23 @@
   justify-content: center;
 }
 
+.experience-banner2 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 150%;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5));
+  border-radius: 10px 10px 0px 0px;
+  -webkit-filter: blur(0px);
+  -moz-filter: blur(0px);
+  -o-filter: blur(0px);
+  -ms-filter: blur(0px);
+  filter: blur(0px);
+  height: 16rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
 .experience-blurred_div {
   position: absolute;
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2));
@@ -44,6 +61,18 @@
 }
 
 .experience-div-company {
+  position: absolute;
+  background: transparent;
+  height: 9rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.experience-div-company2 {
   position: absolute;
   background: transparent;
   height: 9rem;
