--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,16 +1,21 @@
 
-<div class="main" id="skills">
+<div class="main" id="skills" style="margin-top: 5%;">
   <div class="skills-main-div">
-      <div class="skills-image-div" wmAnimate="fadeInRight" aos speed="normal">
+      <!-- <div class="skills-image-div" wmAnimate="fadeInRight" aos speed="normal">
         <img alt="Mehwish Working" src="../../assets/images/developerActivity.svg" class="skills-image-div">
-      </div>
+      </div> -->
       <div class="skills-text-div" wmAnimate="fadeInLeft" aos speed="normal">
         <h1 class="skills-heading">{{skillsSection.title}}</h1>
         <p class="subTitle skills-text-subtitle">{{skillsSection.subTitle}}
-          <app-software-skill></app-software-skill>
-        <div *ngFor="let skill of skillsSection.skills">
-          <p class="subTitle skills-text">{{skill}}</p>
-        </div>
+
+          <div class="experience-container" id="workExperience">
+            <div>
+              <!-- <h1 class="experience-heading">Experiences</h1> -->
+              <div class="experience-cards-div">
+                <app-experience-card  *ngFor="let card of skillsSection.experience" [experience]="card"></app-experience-card>
+              </div>
+            </div>
+          </div>
       </div>
 <!--    </Fade>-->
   </div>
