--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -57,3 +57,22 @@
     order: 2;
   }
 }
+
+.experience-container {
+  display: flex;
+  width: 90%;
+  padding: 20px 10px;
+  margin: 0px auto;
+  margin-top: 2rem;
+}
+
+.experience-container>* {
+  flex: 1;
+}
+.experience-cards-div {
+  display: grid;
+  //grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  gap: 1rem 1rem;
+  //background-color: orange;
+}
