--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
-<div class="footer-div" wmAnimate="jackInTheBox" speed="normal">
-  <p class="footer-text">	&copy; {{currentDate | date:"yyyy"}}, Built with ❤️ by {{name}}</p>
+<div class="footer-div" style="background-color: #ebebeb; border-radius: 20px;" wmAnimate="jackInTheBox" speed="normal">
+  <h1 class="Heading">Funding Notice</h1>
+  <p class="footer-text">	Das Projekt KI-Kompass Inklusiv wird vom Bundesministerium für Arbeit und Soziales (BMAS) aus Mitteln des Ausgleichsfonds für überregionale Vorhaben zur Teilhabe schwerbehinderter Menschen am Arbeitsleben gefördert </p>
 </div>
