--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,6 +8,11 @@
   //animation: fade_left 2s;
 
 }
+.Heading{
+
+  text-align: center;
+  color: #333333;
+}
 
 /* Animations */
 @keyframes fade_down {
