--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="timeline-heading">Education</h1>
+  <h1 class="timeline-heading">Projekt-Auftaktveranstaltung</h1>
 
   <ul class="timeline">
 
@@ -9,6 +9,7 @@
           <span class="flag">{{item.heading}}</span>
           <span class="time-wrapper"><span class="time">{{item.duration}}</span></span>
         </div>
+        
         <div class="desc">{{item.content}}</div>
       </div>
     </li>
