--- a/src/app/greeting/greeting.component.scss
+++ b/src/app/greeting/greeting.component.scss
@@ -116,9 +116,9 @@ p {
   }
 }
 .main-button {
-  background-color: #55198b;
-  border: solid 1px #55198b;
-  color: white;
+  background-color: white;
+  border:solid 1px #55198b;
+  color: #212529;
   font-weight: 700;
   width: max-content;
   padding: 13px 22px;
@@ -134,8 +134,8 @@ p {
   transition: all .3s ease-in-out 0s;
 }
 .main-button:hover {
-  background-color: #ffffff;
-  color: black;
+  background-color:#980050;
+  color: white;
   transition: all .3s ease 0s;
   transform: translateY(-3px);
 }
