--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -3,7 +3,7 @@
 
 
 <div class="main" id="projects" wmAnimate="landing" aos speed="faster">
-  <h1 class="project-title">My Work 📂</h1>
+  <h1 class="project-title"></h1>
 <!--    <img src="https://github.com/Mehwish028/my_portfolio" alt="Sarthak Goenka Github Chart" class="github__chart">-->
   <div class="github__chart">
     <app-github-calendar></app-github-calendar>
@@ -11,7 +11,6 @@
   <div class="repo-cards-div-main" >
     <app-github-repo-card *ngFor="let project of projects2; let i = index" [github]="project" [index]="i"></app-github-repo-card>
   </div>
-<!--  <button class="project-button" >MoreProject</button>-->
-  <div class="project-button"><a class="main-button" href="https://github.com/Mehwish028" target="_blank">More Projects</a></div>
+
 </div>
 
