--- a/src/app/skill-progress/skill-progress.component.html
+++ b/src/app/skill-progress/skill-progress.component.html
@@ -1,6 +1,6 @@
 <div class="skills-container" *ngIf="techStack.viewSkillBars" wmAnimate="fadeInUp" aos speed="normal">
   <div class="skills-bar">
-    <h1 class="skills-heading">Proficiency</h1>
+    <h1 class="skills-heading"></h1>
     <div class="skill" *ngFor="let exp of techStack.experience">
       <p>{{exp.Stack}}</p>
       <div class="meter">
@@ -9,8 +9,6 @@
     </div>
   </div>
 
-  <div class="skills-image">
-    <img alt="Skills" src="../../assets/images/skill.svg" >
-  </div>
+  
 
 </div>
