--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,7 +3,7 @@
   <div class="contact-div-main">
     <div class="contact-header">
       <h1 class="heading contact-title">{{contactInfo.title}}</h1>
-      <p class="subTitle contact-subtitle">{{contactInfo.subtitle}}</p>
+      <p class="subTitle">{{contactInfo.subtitle}}</p>
       <div class="contact-text-div">
      
         <br><br>
