--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -3,7 +3,9 @@
   <div class="contact-div-main">
     <div class="contact-header">
       <h1 class="heading contact-title">{{contactInfo.title}}</h1>
-      <p class="subTitle">{{contactInfo.subtitle}}</p>
+      <p class="subTitle">
+        Die <b>Auftaktveranstaltung des Projekts KI-Kompass Inklusiv findet am 02. Juni 2023 im Kleisthaus in Berlin statt</b>. Die Teilnehmenden erwartet ein spannendes Programm: Interessante Vorträge, konkrete Technologie-Demonstrationen, interaktive World Cafes zu den Aktivitäten des Projekts sowie eine abschließende Panel-Diskussion. Bei Interesse können Sie sich <a href="https://www.ki-assist.de/neuigkeiten/artikel/ki-kompass-inklusiv-auftakt" target="_blank">hier für die Veranstaltung anmelden.</a>
+      </p>
     </div>
   </div>
 </div>
