--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -7,7 +7,9 @@
           {{greeting.title}}
           <!-- <span class="wave-emoji">👋</span> -->
         </h1>
-        <p class="greeting-text-p subTitle">{{greeting.subTitle}}</p>
+        <p class="greeting-text-p subTitle">
+          Das Projekt KI-Kompass Inklusiv verfolgt das Ziel, die Inklusion von Menschen mit Behinderung mithilfe von Künstlicher Intelligenz zu unterstützen. Bis 2027 werden KI-gestützte Assistenztechnologien recherchiert, Beratungs- und Schulungsangebote für Menschen mit Behinderung und wichtige Stakeholder entwickelt und angeboten und Praxislabore zur Entwicklung von inklusiver KI und deren Rahmenbedingungen durchgeführt. In allen barrierearmen Projektaktivitäten werden Menschen mit Behinderung eingebunden. Das Projekt schließt an das vorangegangene <a href="https://www.ki-assist.de/" target="_blank">Projekt KI.ASSIST</a> (2019-2022) an.
+        </p>
             <!-- <app-social-media></app-social-media> -->
         <div class="button-greeting-div">
 <!--        button-->
@@ -27,4 +29,6 @@
       <img src="../../assets/images/bgimage.jpeg" alt="Mehwish sitting on table">
     </div>
   </div>
+  <h2 class="greeting-text-p subTitle" style="text-align: center; font-size: 3rem;">{{greeting.subTitle2}}</h2>
+  <!-- <p class="subTitle skills-text-subtitle" style="color: black;">{{skillsSection.subTitle}} -->
 </div>
