--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -6,7 +6,7 @@
       </div> -->
       <div class="skills-text-div" wmAnimate="fadeInLeft" aos speed="normal">
         <h1 class="skills-heading">{{skillsSection.title}}</h1>
-        <p class="subTitle skills-text-subtitle">{{skillsSection.subTitle}}
+        <p class="subTitle skills-text-subtitle" style="color: black;">{{skillsSection.subTitle}}
 
           <div class="experience-container" id="workExperience">
             <div>
