Final changes done

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -10,7 +10,7 @@
         <a class="contact-detail-email" href="{{'mailto:' + contactInfo.email_address}}">
           {{contactInfo.email_address}}</a>
         <br><br>
-        <app-social-media></app-social-media>
+        <!-- <app-social-media></app-social-media> -->
       </div>
     </div>
 <!--      <div >-->
