--- a/src/app/experience/experience-card/experience-card.component.scss
+++ b/src/app/experience/experience-card/experience-card.component.scss
@@ -8,7 +8,7 @@
 }
 
 .experience-card:hover {
-  box-shadow: #529ada 0px 20px 30px -10px;
+  box-shadow: #868e96 0px 20px 30px -10px;
 }
 
 .experience-banner {
