--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,112 @@
-<div class="footer-div" style="background-color: #ebebeb; border-radius: 20px;" wmAnimate="jackInTheBox" speed="normal">
-  <h1 class="Heading">Funding Notice</h1>
-  <p class="footer-text">	Das Projekt KI-Kompass Inklusiv wird vom Bundesministerium für Arbeit und Soziales (BMAS) aus Mitteln des Ausgleichsfonds für überregionale Vorhaben zur Teilhabe schwerbehinderter Menschen am Arbeitsleben gefördert </p>
-</div>
+
+  <footer class="text-center text-white" style="background-color:#ebebeb">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!-- Section: Images -->
+      <section class="">
+        <h2 class="d-flex justify-content-center align-items-center" style="color:black">Funding Notice </h2>
+       
+
+        
+
+        <p class="d-flex justify-content-center align-items-center">
+          <span class="me-3" style="color: black;">Das Projekt KI-Kompass Inklusiv wird vom Bundesministerium für Arbeit und Soziales (BMAS) aus Mitteln des Ausgleh1chsfonds für überregionale Vorhaben zur Teilhabe schwerbehinderter Menschen am Arbeitsleben gefördert</span>
+        <div class="row">
+          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+            <div
+                 class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                 data-ripple-color="light"
+                 >
+              <img
+                   src="../../assets/images/BAG WfbM_Single_4c_U.png"
+                   class="w-100"
+                   />
+              <a href="#!">
+                <div
+                     class="mask"
+                     style="background-color: rgba(0, 0, 0, 0.2);"
+                     ></div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+            <div
+                 class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                 data-ripple-color="light"
+                 >
+              <img
+                   src="../../assets/images/DFKI_Logo_deutscherSchriftzug (EPS).png"
+                   class="w-100"
+                   />
+              <a href="#!">
+                <div
+                     class="mask"
+                     style="background-color: rgba(0, 0, 0, 0.2);"
+                     ></div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+            <div
+                 class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                 data-ripple-color="light"
+                 >
+              <img
+                   src="../../assets/images/BV_BFW_Logo_4C.png"
+                   class="w-100"
+                   />
+              <a href="#!">
+                <div
+                     class="mask"
+                     style="background-color: rgba(251, 251, 251, 0.2);"
+                     ></div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+            <div
+                 class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                 data-ripple-color="light"
+                 >
+              <img
+                   src="../../assets/images/BAGBBW_RGB_Logo_Bez.png"
+                   class="w-100"
+                   />
+              <a href="#!">
+                <div
+                     class="mask"
+                     style="background-color: rgba(251, 251, 251, 0.2);"
+                     ></div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+            <div
+                 class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                 data-ripple-color="light"
+                 >
+              <img
+                   src="../../assets/images/Funding partner_BMAS.png"
+                   class="w-100"
+                   />
+              <a href="#!">
+                <div
+                     class="mask"
+                     style="background-color: rgba(251, 251, 251, 0.2);"
+                     ></div>
+              </a>
+            </div>
+          </div>
+          
+        </div>
+      </section>
+      <!-- Section: Images -->
+    </div>
+    <!-- Grid container -->
+
+   
+    
+  </footer>
+
+
+<!-- End of .container -->
