--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -14,7 +14,7 @@
         <div class="button-greeting-div">
 <!--        button-->
           <div>
-            <a class="main-button" href="#contact">Contact Us</a>
+            <a class="main-button" href="#contact">Kontaktieren Sie uns</a>
           </div>
           <!-- <div>
             <a class="main-button" href={{greeting.resumeLink}}>See my resume</a>
