--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,10 +12,10 @@
         <a href="#">Das Projekt KI-Kompass Inklusiv</a>
       </li>
       <li>
-        <a href="#skills">Das Projekt Team</a>
+        <a href="#skills">Das Projektteam</a>
       </li>
       <li>
-        <a href="#education">Die Projektauftaktveranstaltung</a>
+        <a href="#education">Die Projekt-Auftaktveranstaltung</a>
       </li>
     </ul>
   </header>
