Changes in footer

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,9 +6,8 @@
       <p class="subTitle">{{contactInfo.subtitle}}</p>
       <div class="contact-text-div">
      
-        <br><br>
-        <a class="contact-detail-email" href="{{'mailto:' + contactInfo.email_address}}">
-          {{contactInfo.email_address}}</a>
+        
+        <a class="contact-detail-email" href="{{'mailto:' + contactInfo.email_address}}">{{contactInfo.email_address}}</a>
         <br><br>
         <!-- <app-social-media></app-social-media> -->
       </div>
