--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
     <div class="container p-4">
       <!-- Section: Images -->
       <section class="">
-        <h2 class="d-flex justify-content-center align-items-center" style="color:black">Funding Notice </h2>
+        <h2 class="d-flex justify-content-center align-items-center" style="color:black">Förderhinweis </h2>
        
 
         
