Footer is fixed

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,14 +12,14 @@
         <p class="d-flex justify-content-center align-items-center">
           <span class="me-3" style="color: black;">Das Projekt KI-Kompass Inklusiv wird vom Bundesministerium für Arbeit und Soziales (BMAS) aus Mitteln des Ausgleh1chsfonds für überregionale Vorhaben zur Teilhabe schwerbehinderter Menschen am Arbeitsleben gefördert</span>
         <div class="row">
-          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+          <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
             <div
-                 class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                 class="bg-image hover-overlay ripple shadow-1-strong rounded" style="margin-top: 15%;"
                  data-ripple-color="light"
                  >
               <img
                    src="../../assets/images/BAG WfbM_Single_4c_U.png"
-                   class="w-100"
+                   height="80%" width="80%"
                    />
               <a href="#!">
                 <div
@@ -28,8 +28,20 @@
                      ></div>
               </a>
             </div>
+            <div style="margin-top: 15%;">
+              <img
+                    src="../../assets/images/DFKI_Logo_deutscherSchriftzug (EPS).png"
+                    height="80%" width="80%"
+                    />
+                <a href="#!">
+                  <div
+                      class="mask"
+                      style="background-color: rgba(0, 0, 0, 0.2);"
+                      ></div>
+                </a>
+            </div>
           </div>
-          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+          <!-- <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
             <div
                  class="bg-image hover-overlay ripple shadow-1-strong rounded"
                  data-ripple-color="light"
@@ -45,15 +57,30 @@
                      ></div>
               </a>
             </div>
-          </div>
-          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+          </div> -->
+          <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
             <div
-                 class="bg-image hover-overlay ripple shadow-1-strong rounded"
+                 class="bg-image hover-overlay ripple shadow-1-strong rounded" style="margin-top: 15%;"
                  data-ripple-color="light"
                  >
               <img
                    src="../../assets/images/BV_BFW_Logo_4C.png"
-                   class="w-100"
+                   height="80%" width="80%"
+                   />
+              <a href="#!">
+                <div
+                     class="mask"
+                     style="background-color: rgba(251, 251, 251, 0.2);"
+                     ></div>
+              </a>
+            </div>
+            <div
+                 class="bg-image hover-overlay ripple shadow-1-strong rounded" style="margin-top: 15%;"
+                 data-ripple-color="light"
+                 >
+              <img
+                   src="../../assets/images/BAGBBW_RGB_Logo_Bez.png"
+                   height="80%" width="80%"
                    />
               <a href="#!">
                 <div
@@ -63,7 +90,7 @@
               </a>
             </div>
           </div>
-          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+          <!-- <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
             <div
                  class="bg-image hover-overlay ripple shadow-1-strong rounded"
                  data-ripple-color="light"
@@ -79,8 +106,8 @@
                      ></div>
               </a>
             </div>
-          </div>
-          <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+          </div> -->
+          <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
             <div
                  class="bg-image hover-overlay ripple shadow-1-strong rounded"
                  data-ripple-color="light"
