--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -58,6 +58,8 @@
               </a>
             </div>
           </div> -->
+         
+
           <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
             <div
                  class="bg-image hover-overlay ripple shadow-1-strong rounded" style="margin-top: 15%;"
@@ -123,11 +125,66 @@
                      ></div>
               </a>
             </div>
+            
           </div>
-          
+          <html>
+            <head>
+              
+                
+                <title>Button Example</title>
+                <style>
+                    
+            
+                    .button-wrapper {
+                        display: flex;
+                        gap: 20px;
+                        justify-content: center;
+                        background-color: #ebebeb
+                    }
+            
+                    .button-wrapper a {
+                        text-decoration: none;
+                        justify-content: center;
+                        
+                        
+                    }
+            
+                    .button {
+                        display: inline-block;
+                        padding: 10px 20px;
+                        background-color: #3498db;
+                        margin-left: 120px;
+                        border: none;
+                        cursor: pointer;
+                        transition: background-color 0.3s;
+                        justify-content: center;
+                        color: whitesmoke;
+                        font-size: 150%;
+                    }
+            
+                    .button:hover {
+                        background-color: #2980b9;
+                    }
+                </style>
+            </head>
+            <body>
+                <div class="button-wrapper">
+                    <a href="../../assets/PDF/20230505_K2I_Webseite_Datenschutz.pdf" target="_blank">
+                        <button class="button">Datenschutz</button>
+                    </a>
+                    <a href="../../assets/PDF/20230505_K2I_Webseite_Impressum.pdf" target="_blank">
+                        <button class="button">Impressum</button>
+                    </a>
+                  
+                </div>
+            </body>
+            </html>
         </div>
       </section>
       <!-- Section: Images -->
+    
+     
+
     </div>
     <!-- Grid container -->
 
