--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -4,7 +4,7 @@
     <div class="contact-header">
       <h1 class="heading contact-title">{{contactInfo.title}}</h1>
       <p class="subTitle">
-        Die <b>Auftaktveranstaltung des Projekts KI-Kompass Inklusiv hat am 02. Juni 2023 im Kleisthaus in Berlin statt gefunden</b>.Die Teilnehmenden konnten ein spannendes Programm verfolgen: Interessante Vorträge, konkrete Technologie-Demonstrationen, interaktive World Cafes zu den Aktivitäten des Projekts sowie eine abschließende Panel-Diskussion. Dei Dokumentation der Veranstaltung finden Sie hier<a href="https://www.ki-assist.de/neuigkeiten/artikel/ki-kompass-inklusiv-auftakt" target="_blank"></a>
+        Die <b>Auftaktveranstaltung des Projekts KI-Kompass Inklusiv hat am 02. Juni 2023 im Kleisthaus in Berlin statt gefunden</b>.Die Teilnehmenden konnten ein spannendes Programm verfolgen: Interessante Vorträge, konkrete Technologie-Demonstrationen, interaktive World Cafes zu den Aktivitäten des Projekts sowie eine abschließende Panel-Diskussion. <a href="https://www.ki-assist.de/dialog-und-vernetzen/veranstaltungen/ki-kompass-inklusiv-auftaktveranstaltung" target="_blank">Die Dokumentation der Veranstaltung finden Sie hier</a>
       </p>
     </div>
   </div>
