--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
         
 
         <p class="d-flex justify-content-center align-items-center">
-          <span class="me-3" style="color: black;">Das Projekt KI-Kompass Inklusiv wird vom Bundesministerium für Arbeit und Soziales (BMAS) aus Mitteln des Ausgleh1chsfonds für überregionale Vorhaben zur Teilhabe schwerbehinderter Menschen am Arbeitsleben gefördert</span>
+          <span class="me-3" style="color: black;">Das Projekt KI-Kompass Inklusiv wird vom Bundesministerium für Arbeit und Soziales (BMAS) aus Mitteln des Ausgleh1chsfonds für überregionale Vorhaben zur Teilhabe schwerbehinderter Menschen am Arbeitsleben gefördert" should be "Das Projekt KI-Kompass Inklusiv wird vom Bundesministerium für Arbeit und Soziales (BMAS) aus Mitteln des Ausgleichsfonds für überregionale Vorhaben zur Teilhabe schwerbehinderter Menschen am Arbeitsleben gefördert"</span>
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
             <div
